iai-callgrind/tests/ui/test_main_invalid_library_benchmark_groups.stderr
error[E0425]: cannot find function `__compare_by_id` in module `some_func`
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `some_func`
  |
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function
  |
2 +     use crate::test_main_when_invalid_config::my_group::__compare_by_id;
  |

error[E0603]: function import `__run_setup` is private
 --> src/macros.rs
  |
  |                     $group::__run_setup(false),
  |                             ^^^^^^^^^^^ private function import
  |
 ::: tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ------------------------------------------- function `__run_setup` is not publicly re-exported
  |
note: the function import `__run_setup` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_setup` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_teardown` is private
 --> src/macros.rs
  |
  |                     $group::__run_teardown(false),
  |                             ^^^^^^^^^^^^^^ private function import
  |
 ::: tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ------------------------------------------- function `__run_teardown` is not publicly re-exported
  |
note: the function import `__run_teardown` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_teardown` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: function import `__run_setup` is private
   --> src/macros.rs
    |
    |                         $group::__run_setup,
    |                                 ^^^^^^^^^^^ private function import
    |
note: the function import `__run_setup` is defined here...
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
    |
3   |     #[library_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_setup` which is defined here
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
    |
6   |     main!(library_benchmark_groups = some_func);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function instead
    |
493 |                         crate::test_main_when_library_benchmark_as_group::__run_setup,
    |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0603]: function import `__run_teardown` is private
   --> src/macros.rs
    |
    |                         $group::__run_teardown,
    |                                 ^^^^^^^^^^^^^^ private function import
    |
note: the function import `__run_teardown` is defined here...
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
    |
3   |     #[library_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run_teardown` which is defined here
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
    |
6   |     main!(library_benchmark_groups = some_func);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function instead
    |
494 |                         crate::test_main_when_library_benchmark_as_group::__run_teardown,
    |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0603]: function import `__run` is private
   --> src/macros.rs
    |
    |                         $group::__run
    |                                 ^^^^^ private function import
    |
note: the function import `__run` is defined here...
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
    |
3   |     #[library_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `__run` which is defined here
   --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
    |
6   |     main!(library_benchmark_groups = some_func);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `library_benchmark` which comes from the expansion of the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function instead
    |
495 |                         crate::test_main_when_library_benchmark_as_group::__run
    |

error[E0308]: mismatched types
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `fn(usize, usize, Option<usize>)`
                found fn item `fn() {test_main_when_library_benchmark_as_group::__run}`
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `&[&(&str, fn() -> ..., ...)]`, found `&[InternalMacroLibBench]`
  |     arguments to this method are incorrect
  |
  = note: expected reference `&[&(&'static str, fn() -> Option<InternalLibraryBenchmarkConfig>, &[InternalMacroLibBench])]`
             found reference `&'static [InternalMacroLibBench]`
note: method defined here
 --> src/__internal/lib_bench.rs
  |
  |     pub fn add_group(
  |            ^^^^^^^^^
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InternalLibraryBenchmarkConfig: From<&str>` is not satisfied
  --> tests/ui/test_main_invalid_library_benchmark_groups.rs:19:5
   |
19 | /     main!(
20 | |         config = "some";
21 | |         library_benchmark_groups = my_group
22 | |     );
   | |_____^ the trait `From<&str>` is not implemented for `InternalLibraryBenchmarkConfig`
   |
   = help: the following other types implement trait `From<T>`:
             <InternalLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
   = note: required for `&str` to implement `Into<InternalLibraryBenchmarkConfig>`
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
